--- a/bb-pets-adoption-frontend/src/css/common.css
+++ b/bb-pets-adoption-frontend/src/css/common.css
@@ -46,6 +46,8 @@ h6 {
     letter-spacing: 0.8px;
 }
 
+#delete_user_button,
+#personal_details_update_wrapper form input,
 #list_pet_form label,
 #reg_form input,
 #reg_form input::placeholder,
@@ -204,7 +206,7 @@ h6 {
 
 #header_navbar .dropdown-menu {
     text-align: center;
-    width: 250px;
+    min-width: 250px;
 }
 
 #header_navbar .dropdown-menu a {
@@ -218,6 +220,7 @@ h6 {
 }
 
 #header_navbar #signIn_button {
+
     background-color: #050505;
     color: #F5EDE3;
     border-radius: 10px;
@@ -454,7 +457,21 @@ h6 {
 }
 
 @media (min-width: 350px) and (max-width: 576px) {
+    #notifications_space {
+        margin-top: 30px;
+    }
 
+
+
+    #sign_in_messsage {
+        text-align: center;
+        width: 98%;
+        padding: 20px 5px;
+        height: 0px;
+        color: #F5EDE3;
+        letter-spacing: 0.8px;
+        font-size: 0.9rem;
+    }
 
     #post_action_message_wrapper #post_action_message_container,
     #notification_message_container {
@@ -496,29 +513,12 @@ h6 {
         font-size: 20px;
         margin-right: 20px;
         margin: 0 auto;
-        width: 20%;
         letter-spacing: 1px;
+        /* width: 20%; */
     }
 
-    #header_navbar .navbar-nav a:hover {
-        text-align: center;
-        font-size: 20px;
-        margin-right: 20px;
-        margin: 0 auto;
-        width: 20%;
-        border-bottom: solid 2px #050505;
-    }
 
-    #header_navbar .dropdown-menu {
-        text-align: center;
-        width: 100%;
-    }
 
-    #header_navbar .dropdown-menu a {
-        margin: 0 auto;
-        text-align: center;
-        width: 100%;
-    }
 
     #header_navbar #signIn_button {
         text-align: center;
@@ -578,6 +578,10 @@ h6 {
     #header_navbar .navbar-nav a {
         margin-right: 0px;
 
+    }
+
+    #header_navbar .navbar-nav #account_dropdown {
+        text-align: end;
     }
 
     #header_navbar .dropdown-menu {
