--- a/bb-pets-adoption-frontend/src/css/style.css
+++ b/bb-pets-adoption-frontend/src/css/style.css
@@ -32,7 +32,7 @@
 }
 
 #category_Puppies {
-    background-image: url("/public/assets/images/dog_face.jpg");
+    background-image: url("/public/assets/images/dog_face.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
@@ -43,7 +43,7 @@
 }
 
 #category_Kitties {
-    background-image: url("/public/assets/images/cat_face.jpg");
+    background-image: url("/public/assets/images/cat_face.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
@@ -128,6 +128,32 @@
 }
 
 
+/** VERIFY ACOUNT*/
+#very_account_wrapper {
+    width: 1400px;
+    min-height: 600px;
+}
+
+#very_account_wrapper #very_account_container {
+    width: 80%;
+    margin-top: 100px;
+    height: fit-content;
+    padding: 50px;
+    border: solid 1px #C19A6B;
+    border-radius: 10px;
+}
+
+#very_account_wrapper #very_account_container h2 {
+    color: #5A4633;
+    font-weight: 700;
+    margin-bottom: 50px;
+}
+
+#very_account_wrapper #very_account_container h3 {
+    color: #5A4633;
+    font-weight: 300;
+}
+
 @media (max-width: 1200px) {}
 
 @media (min-width: 992px) {}
@@ -135,102 +161,6 @@
 /************************************************* (min-width: 768px) and (max-width: 990px) ****/
 
 @media (min-width: 768px) and (max-width: 990px) {
-
-
-    /****  COMMON  ***/
-
-
-    #post_action_message_holder,
-    #notification_message_holder {
-        min-height: 40px;
-    }
-
-    #post_action_message_wrapper #post_action_message_container,
-    #notification_message_container {
-        width: 95%;
-        padding: 15px 0 5px;
-    }
-
-    /********************* HEADER */
-    #logo_nav_holder {
-        background-image: url("/public/assets/images/Logo.png");
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: contain;
-        width: 180px;
-        height: 75px;
-        aspect-ratio: 16/9;
-        /* Adjust aspect ratio as needed */
-
-    }
-
-    #header_navbar .navbar-nav a {
-        text-align: center;
-        text-align: center;
-        font-size: 20px;
-        margin-right: 20px;
-        margin: 0 auto;
-        width: 20%;
-        letter-spacing: 1px;
-
-    }
-
-    #header_navbar .navbar-nav a:hover {
-        text-align: center;
-        font-size: 20px;
-        margin-right: 20px;
-        margin: 0 auto;
-        width: 20%;
-        border-bottom: solid 2px #050505;
-    }
-
-
-
-    #header_navbar #signIn_button {
-        text-align: center;
-        font-size: 20px;
-        color: #050505;
-        border-bottom: solid 2px transparent;
-        background-color: transparent;
-        border-radius: 0;
-        font-weight: bold;
-    }
-
-    #header_navbar #signIn_button:hover {
-
-        background-color: transparent;
-        border-bottom: solid 2px #050505;
-        border-radius: 0;
-
-    }
-
-    /****** HEADER LOGIN FORM */
-    #login_wrapper {
-        min-width: 500px;
-        max-width: 650px;
-        height: 370px;
-        padding-top: 40px;
-        padding-bottom: 20px;
-    }
-
-
-    #header_navbar div[aria-labelledby="signIn_button"] {
-        position: absolute;
-        right: 0;
-        top: 60px;
-        margin: 0 auto;
-        border-color: #5A4633;
-        width: 100%
-    }
-
-
-    #login_form input {
-        font-size: 15px;
-        width: 70%;
-    }
-
-
-
 
     /************************************ PET CATEGORIES */
     #categories_wrapper {
@@ -255,7 +185,7 @@
     }
 
     #category_Puppies {
-        background-image: url("/public/assets/images/dog_face.jpg");
+        background-image: url("/public/assets/images/dog_face.png");
         background-position: center;
         background-repeat: no-repeat;
         background-size: contain;
@@ -265,15 +195,13 @@
     }
 
     #category_Kitties {
-        background-image: url("/public/assets/images/cat_face.jpg");
+        background-image: url("/public/assets/images/cat_face.png");
         background-position: center;
         background-repeat: no-repeat;
         background-size: contain;
         width: 183px;
         height: 183px;
     }
-
-
 
 
     /*************** ADOPTION INFORMATION SECTION */
@@ -290,52 +218,36 @@
     }
 
 
-
-
-    /******* FOOTER   ****/
-    #footer_navbar {
-        position: relative;
-        margin-top: 100%;
-        background-image: none;
-        height: fit-content;
-        padding-top: 80px;
+    /** VERIFY ACOUNT*/
+    #very_account_wrapper {
+        width: 100%;
+        min-height: 600px;
     }
 
-    #footer_bg_holder img {
-        margin: 0 auto 50px;
+    #very_account_wrapper #very_account_container {
+        width: 90%;
     }
 
-    #footer_navbar a {
-        color: #F5EDE3;
-        letter-spacing: 0.8px;
-        font-size: 21px;
-        border: solid 1px #6a5b48;
-    }
-
-    #footer_navbar a:hover {
-        border: solid 1px #F5EDE3;
-    }
-
-    #logo_footer {
-        margin: 50px auto 50px;
-        background-image: url("/public/assets/images/Logo\ Light.png");
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: contain;
-        width: 200px;
-        height: 170px;
-        aspect-ratio: 16/9;
-        /* Adjust aspect ratio as needed */
-    }
-
-
-    #footer_navbar #copyright {
-        color: #F5EDE3;
-        letter-spacing: 0.5px;
-        font-size: 15px;
-    }
 }
 
+/*********************************     @media (min-width: 575px) and (max-width: 775px)  *******/
+@media (min-width: 575px) and (max-width: 775px) {
+
+    /** VERIFY ACOUNT*/
+    #very_account_wrapper {
+        width: 100%;
+        min-height: 600px;
+    }
+
+    #very_account_wrapper #very_account_container {
+        width: 95%;
+        margin-top: 100px;
+        height: fit-content;
+        padding: 30px;
+        border: solid 1px #C19A6B;
+        border-radius: 10px;
+    }
+}
 
 /*********************************     @media (min-width: 356px) and (max-width: 575px)  *******/
 @media (min-width: 356px) and (max-width: 575px) {
@@ -365,7 +277,6 @@
         margin-bottom: 250px;
     }
 
-
     #categories_wrapper #categories_holder {
         width: 85%;
     }
@@ -383,25 +294,25 @@
     }
 
     #categories_wrapper #category_Puppies {
-        background-image: url("/public/assets/images/dog_face.jpg");
+        background-image: url("/public/assets/images/dog_face.png");
         background-position: center;
         background-repeat: no-repeat;
         background-size: contain;
         margin-top: 0;
-        width: 128px;
-        height: 128px;
+        width: 138px;
+        height: 138px;
     }
 
     #categories_wrapper #category_Kitties {
         width: 80%;
         height: 80%;
-        background-image: url("/public/assets/images/cat_face.jpg");
+        background-image: url("/public/assets/images/cat_face.png");
         background-position: center;
         background-repeat: no-repeat;
         background-size: contain;
         margin-top: 0;
-        width: 128px;
-        height: 128px;
+        width: 138px;
+        height: 138px;
     }
 
     #categories_wrapper .category_tittle {
@@ -435,27 +346,23 @@
         font-size: 22px;
     }
 
-
-    /******* FOOTER   ****/
-    #footer_navbar a {
-        font-size: 20px;
+    /** VERIFY ACOUNT*/
+    #very_account_wrapper {
+        width: 100%;
+        min-height: 600px;
     }
 
-    #footer_navbar a:hover {
-        border: solid 1px #F5EDE3;
+    #very_account_wrapper #very_account_container {
+        width: 90%;
+        padding: 20px;
     }
 
-    #logo_footer {
-        margin: 50px auto 50px;
-        background-image: url("/public/assets/images/Logo\ Light.png");
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: contain;
-        width: 200px;
-        height: 160px;
-        aspect-ratio: 16/9;
-        /* Adjust aspect ratio as needed */
+    #very_account_wrapper #very_account_container h2 {
+        font-size: 1.3rem;
     }
 
+    #very_account_wrapper #very_account_container h3 {
+        font-size: 1.1rem;
+    }
 
 }
